--- a/config-data/user-service.yaml
+++ b/config-data/user-service.yaml
@@ -1,2 +1,10 @@
 server:
   port: 8001
+eureka:
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    instance:
+      hostname: localhost
