--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -10,6 +10,15 @@ eureka:
     instance:
       hostname: localhost
 
+management:
+  endpoint:
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: *
+
 spring:
   cloud:
     gateway:
