--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -17,7 +17,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: gateway
+        include: health,gateway
 
 spring:
   cloud:
