--- a/config-data/user-service.yaml
+++ b/config-data/user-service.yaml
@@ -2,6 +2,8 @@ server:
   port: 8001
 eureka:
   client:
+    registration:
+      preferIpAddress: true
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
