--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -33,7 +33,7 @@ spring:
           enabled: true
       routes:
         - id: user-service
-          uri: lb://user-service
+          uri: lb://user-service/user
           predicates:
             - Path=/user/**
             - Header=X-Powered-By, Spring Cloud Gateway
